cambios en agendas y secretarias

--- a/views/admin/adminRegisterSecretaria.pug
+++ b/views/admin/adminRegisterSecretaria.pug
@@ -22,6 +22,12 @@ html
                         fieldset(class="pwRegistro")
                             label(class="lbPwRegistro" for="registerPassword") Contraseña:
                             input(class="inputPwRegistro" type="password" id="registerPassword" name="password" required placeholder="Contraseña")
+                        fieldset(class="emailRegistro")
+                            label(class="lbEmailRegistro" for="sucursal_id") Sucursal:
+                            select(class="inputEmailRegistro" name="sucursal_id" id="sucursal_id" required)
+                                option(value="" disabled selected) Selecciona una sucursal
+                                each sucursal in sucursales
+                                    option(value=sucursal.id)= sucursal.nombre
                         button(class="botonRegistro" type="submit") Registrar secretaria
         include ../includes/footer
         script(src="/js/logout.js")
