cambio en turnos

--- a/views/secretaria/secretariaTurnos.pug
+++ b/views/secretaria/secretariaTurnos.pug
@@ -16,7 +16,7 @@ html
       select(name="sucursal" class="selectSecreTurno")
         option(value="" class="optionSecreTurno") Todas las sucursales
           each s in sucursales
-            option(value=s.nombre class="optionSecreTurno")= s.nombre
+            option(value=s.id class="optionSecreTurno" selected=(sucursalUsuario && s.id == sucursalUsuario))= s.nombre
       button(type="submit" class="buttonSecreTurno") Filtrar
     section(class="sectionSecreTurnos")
       if turnos && turnos.length
