gestor de agendas

--- a/views/includes/headerSecretaria.pug
+++ b/views/includes/headerSecretaria.pug
@@ -7,5 +7,6 @@ header(class="headerSecre")
           li(class="liHeaderSecre"): a(href="/secretaria/listarEspera" class="aLiHeaderSecre") Lista de espera
           li(class="liHeaderSecre"): a(href="/secretaria/gestionTurno" class="aLiHeaderSecre") Crear Turno
           li(class="liHeaderSecre"): a(href="/agendas/crear" class="aLiHeaderSecre") Crear Agenda
+          li(class="liHeaderSecre"): a(href="/agendas/listar" class="aLiHeaderSecre") Gestionar Agendas
           li(class="liHeaderSecre"): a(href="/agendas/ausencias/form" class="aLiHeaderSecre") Cargar/Borrar Ausencia
           li(class="liHeaderSecre"): a(href="javascript:void(0);" id="logoutButton" class="aLiHeaderSecre") Cerrar Sesión
