--- a/views/admin/adminRegisterSecretaria.pug
+++ b/views/admin/adminRegisterSecretaria.pug
@@ -21,7 +21,10 @@ html
                             input(class="inputEmailRegistro" type="email" id="registerEmail" name="email" required placeholder="Correo electrónico")
                         fieldset(class="pwRegistro")
                             label(class="lbPwRegistro" for="registerPassword") Contraseña:
-                            input(class="inputPwRegistro" type="password" id="registerPassword" name="password" required placeholder="Contraseña")
+                            input(class="inputPwRegistro" type="password" id="registerPassword" name="password" required placeholder="Contraseña" minlength="8")
+                        fieldset(class="pwRegistro")
+                            label(class="lbPwRegistro" for="registerConfirmPassword") Confirmar contraseña:
+                            input(class="inputPwRegistro" type="password" id="registerConfirmPassword" name="confirm_password" required placeholder="Confirmar contraseña" minlength="8")
                         fieldset(class="emailRegistro")
                             label(class="lbEmailRegistro" for="sucursal_id") Sucursal:
                             select(class="inputEmailRegistro" name="sucursal_id" id="sucursal_id" required)
