--- a/views/secretaria/secretariaCrearAgenda.pug
+++ b/views/secretaria/secretariaCrearAgenda.pug
@@ -5,6 +5,7 @@ html
     link(rel="stylesheet" href="/css/secretariaCrearAgenda.css")
     link(rel="stylesheet" href="/css/headerSecretaria.css")
     link(rel="stylesheet" href="/css/footer.css")
+    link(rel="stylesheet" href="/css/autocompletar_estilos.css")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
   body
     include ../includes/headerSecretaria
@@ -13,18 +14,16 @@ html
 
       form(action="/agendas/crear" method="POST" class="form-agenda")
         
-        label(for="profesional") Seleccionar Profesional:
-        select(name="profesional_especialidad_id" id="profesional" required)
-          option(value="" disabled selected) Selecciona un profesional
-          each profesional in profesionales
-            option(value=profesional.id)= `${profesional.nombre_completo} / ${profesional.especialidad}`
+        label(for="profesional-search") Seleccionar Profesional:
+        .autocompletar_contenedor
+          input(type="text" id="profesional-search" class="autocompletar_input" placeholder="Buscar por apellido o nombre..." autocomplete="off")
+          input(type="hidden" name="profesional_especialidad_id" id="profesional-id" required)
 
         
-        label(for="sucursal") Seleccionar Sucursal:
-        select(name="sucursal_id" id="sucursal" required)
-          option(value="" disabled selected) Selecciona una sucursal
-          each sucursal in sucursales
-            option(value=sucursal.id)= sucursal.nombre
+        label(for="sucursal-search") Seleccionar Sucursal:
+        .autocompletar_contenedor
+          input(type="text" id="sucursal-search" class="autocompletar_input" placeholder="Buscar por nombre o dirección..." autocomplete="off")
+          input(type="hidden" name="sucursal_id" id="sucursal-id" required)
 
         
         label(for="dia_inicio") Fecha de inicio:
@@ -71,3 +70,9 @@ html
     script(src="/js/logout.js")
     script(src="https://cdn.jsdelivr.net/npm/flatpickr")
     script(src="/js/crearAgendas.js")
+    script(src="/js/autocompletar_profesional_agenda.js")
+    script(src="/js/autocompletar_sucursal.js")
+    script.
+      // Inicializar autocompletados
+      const autocompletarProfesional = new AutocompletarProfesionalAgenda('profesional-search', 'profesional-id');
+      const autocompletarSucursal = new AutocompletarSucursal('sucursal-search', 'sucursal-id');
