--- a/views/secretaria/secretariaTurnos.pug
+++ b/views/secretaria/secretariaTurnos.pug
@@ -37,7 +37,7 @@ html
               th Acciones
           tbody
             each turno in turnos
-              tr
+              tr(class=turno.estado === 'Por reasignar' ? 'turno-por-reasignar' : '')
                 td= turno.paciente_nombre
                 td= turno.nombre_medico
                 td= turno.especialidad 
@@ -57,7 +57,10 @@ html
                 td
                   a(href=`/turnos/detalles/${turno.id}` class="btnEditarSecreTurno") Detalles
                 td
-                  a(href=`/turnos/trasladar/${turno.id}` class="btnEditarSecreTurno") Trasladar turno
+                  if turno.estado === 'Por reasignar'
+                    a(href=`/turnos/reasignar/${turno.id}` class="btnReasignarSecreTurno") Reasignar
+                  else
+                    a(href=`/turnos/trasladar/${turno.id}` class="btnEditarSecreTurno") Trasladar turno
             else
               p No hay turnos disponibles
     include ../includes/footer
