--- a/public/css/pacienteEditar.css
+++ b/public/css/pacienteEditar.css
@@ -174,6 +174,13 @@ body {
   font-size: 18px;
 }
 
+.error {
+  color: red;
+  font-size: 0.8rem;
+  margin-top: 2px;
+  display: block;
+}
+
 @media (max-width: 900px) {
     .sectionPrincipalEditar {
         max-width: 95%;
