--- a/views/login.pug
+++ b/views/login.pug
@@ -1,25 +1,30 @@
 doctype html
-html
+html(lang="es")
   head
-    title Registro Login
+    title Iniciar Sesión
     link(rel="stylesheet", href="/css/login.css")
-    link(rel="stylesheet" href="/css/footer.css")
+    link(rel="stylesheet", href="/css/footer.css")
+    link(href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap", rel="stylesheet")
+
   body
-    header 
-      a(href="http://localhost:3000/", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
+
     main.mainLogin
-      section.seccion
-        article.articuloLogin
-          form.formLogin(id="loginForm")
-            span.spanLogin INICIAR SESIÓN
-            fieldset.emailLogin
-              label.lbEmailLogin(for="loginEmail") Correo electrónico:
-              input.inputEmailLogin(type="email", id="loginEmail", name="email", required, placeholder="Correo electrónico")
-            fieldset.pwLogin
-              label.lbPwLogin(for="loginPassword") Contraseña:
-              input.inputPwLogin(type="password", id="loginPassword", name="password", required, placeholder="Contraseña")
-            a(href="/pwOlvidada" class="pwOlvidada") ¿Olvidaste tu contraseña? 
-            button.botonLogin(type="submit") Iniciar Sesión
-            p(class="pError" id="error-message")
-    include includes/footer
+      .login-container
+        .left-side
+          img.imgLogin(src="/img/login.jpg", alt="")
+          .img-text
+            h2 “Simplemente todas las herramientas que mi equipo y yo necesitamos.”
+        .right-side
+          a(href="http://localhost:3000/", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
+          .form-box
+            h1 Bienvenido
+            p.subtitle Iniciá sesión para continuar
+            form.formLogin(id="loginForm")
+              label(for="loginEmail") Email
+              input(type="email", id="loginEmail", name="email", required placeholder="Correo electrónico")
+              label(for="loginPassword") Contraseña
+              input(type="password", id="loginPassword", name="password", required placeholder="Contraseña")
+              a.forgot(href="/pwOlvidada") ¿Olvidaste tu contraseña?
+              button.btnLogin(type="submit") Iniciar Sesión
+              p#error-message.pError
     script(type="module" src="/js/login.js")
